--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ dmypy.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks
+
+data/
