--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ dmypy.json
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks
 
 data/
+
+Detection/*.pt
